Add arrow and anchor to /quiz

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 		<meta name="description" content="Quizzler: Challenge your intellect with our engaging quiz app, designed to test your knowledge across a variety of topics." />
 		<meta name="keywords" content="quiz, knowledge, test, trivia, challenge, fun, learning" />
 		<meta name="author" content="NaryalinDev" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
 		<meta property="og:title" content="Quizzler: Test Your Knowledge" />
@@ -65,7 +65,7 @@ const { title } = Astro.props;
 		font-family: 'Bebas Neue', cursive;
 	}
 
-	p{
+	p, a{
 		font-family: 'Sora', sans-serif;
 	}
 </style>
