--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Arrow from "../components/Arrow.astro";
-import { questions as questionsStore } from "../store/questions";
-import { getQuizzes } from "../services/quizAPI";
-
-// Get questions
-const questions = await getQuizzes();
-let firstId
-if (questions.length > 0) {
-  firstId = questions[0].id;
-  questionsStore.set(questions);
-}
 ---
 
 <Layout title="Welcome to Quizzler">
@@ -26,7 +16,7 @@ if (questions.length > 0) {
 				</div>
 			</div>
 			<div class="flex justify-end mt-[3vw]">
-				<a href=`/quiz/${firstId}` class="flex justify-end items-center hover:underline w-fit">
+				<a href=`/quiz/` class="flex justify-end items-center hover:underline w-fit">
 					Let's start the Quiz
 					<Arrow/>
 				</a>
